--- a/new_index.html
+++ b/new_index.html
@@ -18,13 +18,26 @@
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
-    <div class="container">
-      <h1>Ashley Dzick</h1>
-      <h2>UX Designer in Milwaukee; lover of data, dogs and beer.</h2>
-      <ul>
-        <li><a href="ADzick_Resume.pdf">View Resume</a></li>
-        <li><a href="mailto:a.dzick@gmail.com">Get in Touch</a></li>
-      </ul>
-    </div>
+
+    <h1>Ashley Dzick</h1>
+    <h2>Selected Projects</h2>
+
+    <h3>Data-Informed Design</h3>
+    <ul>
+      <li><a href="" >"Native iOS and Android Apps for Power Tool Manufacturer"</a></li>
+      <li><a href="" >"WCAG-Compliant Software Consulting Website"</a></li>
+      <li><a href="" >"Implementing Google's Design Sprints and Agile UX"</a></li>
+      <li><a href="" >"User Testing Strategy and Analytics"</a></li>
+    </ul>
+
+    <h3>Building a UX Culture</h3>
+    <ul>
+      <li><a href="" >"Starting a distributed UX Practice"</a></li>
+      <li><a href="" >"Fostering the Milwaukee UX Community"</a></li>
+      <li><a href="" >"Adjunct Professor of UX and Speaking arrangements"</a></li>
+    </ul>
+
+    <a href="">View my Resume</a>
+    <a href="mailto:a.dzick@gmail.com">Get in Touch!</a>
   </body>
 </html>
