--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<h1>derp</h1>
+<!DOCTYPE html>
+<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
+<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
+<!--[if IE 8]><html class="preIE9"><![endif]-->
+<!--[if gte IE 9]><!-->
+<html lang="en"><!--<![endif]-->
+  <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Ashley Dzick</title>
+  <meta name="author" content="Ashley Dzick">
+  <meta name="description" content="Ashley Dzick Portfolio">
+  <meta name="keywords" content="user experience, portfolio">
+  <link rel="icon" href="favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://use.typekit.net/xeo1khi.css">
+  <link rel="stylesheet" href="reset.css" type="text/css">
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Ashley Dzick</h1>
+      <!--<h2 class="subtitle italics">Selected Projects</h2>-->
+
+      <div class="section">
+        <h3>Selected Projects</h3>
+        <ul class="nav">
+          <li><a href="portfolio-mfg.html">Native iOS and Android Apps for Power Tool Manufacturer</a></li>
+          <li><a href="portfolio-safenet.html" >WCAG-Compliant Software Consulting Website</a></li>
+          <li><a href="portfolio-sprint.html" >Design Sprints and Agile UX</a></li>
+          <li><a href="portfolio-testing.html" >User Testing Strategy and Analytics</a></li>
+        </ul>
+      </div>
+      <!--
+      <div class="section">
+        <h3>Building a UX Culture</h3>
+        <ul class="nav">
+          <li><a href="" >Starting a distributed UX Practice</a></li>
+          <li><a href="" >Fostering the Milwaukee UX Community</a></li>
+          <li><a href="" >Adjunct Professor of UX and Speaking arrangements</a></li>
+        </ul>
+      </div>
+          -->
+      <div class="section">
+          <p><a href="ADzick_Resume.pdf">Resume</a></p>
+          <a href="mailto:a.dzick@gmail.com" alt="email"><img class="img-icon" src="images/email-outline.svg"/></a>
+          <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" src="images/twitter.svg"/></a>
+          <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" src="images/linkedin.svg"/></a>
+        </ul>
+      </div>
+
+    </div>
+    </div>
+  </body>
+</html>
