--- a/portfolio-sprint.html
+++ b/portfolio-sprint.html
@@ -23,7 +23,7 @@
       <a href="index.html">Back to homepage</a>
 
       <h1 class="small-title">Implementing Design Sprints and Agile UX</h1>
-      <p class="italics">Industries: eCommerce, software</p>
+      <p class="italics">Industries: eCommerce, Software</p>
       <div class="section">
         <h2>The Challenge</h2>
         <p>A local user experience team worked asynchronously from their developers, sometimes as far as six months ahead of time. When it came time for developer implementation, requirements had changed and screens frequently had to be redesigned. The team was looking to work in a more agile fashion, while still being able to think “big picture”.</p>
