--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
   <body>
     <div class="container">
       <h1>Ashley Dzick</h1>
-      <h2 class="subtitle italics">Selected Projects</h2>
+      <h2 class="subtitle italics">UX Architect with a love of data and minimalism</h2>
 
       <div class="section">
         <h3>Data-Informed Design</h3>
         <ul class="nav">
-          <li><a href="portfolio-mfg.html">Native iOS and Android Apps for Power Tool Manufacturer</a></li>
-          <li><a href="portfolio-safenet.html">WCAG-Compliant Software Consulting Website</a></li>
+          <li><a href="portfolio-native.html">Native iOS and Android Apps for Milwauke Tool</a></li>
+          <li><a href="portfolio-mfg.html">Updated Styling and Style Guide for Manufacturing Company</a></li>
+          <li><a href="portfolio-safenet.html">Accessibility-Compliant Software Consulting Website</a></li>
           <li><a href="portfolio-sprint.html">Design Sprints and Agile UX</a></li>
           <li><a href="portfolio-testing.html">User Testing Strategy and Analytics</a></li>
         </ul>
@@ -34,17 +35,19 @@
       <div class="section">
         <h3>Building a UX Culture</h3>
         <ul class="nav">
-          <li><a href="portfolio-remote.html">Starting a Distributed UX Practice</a></li>
           <li><a href="portfolio-mke.html">Fostering the Milwaukee UX Community</a></li>
-          <li><a href="portfolio-speaking.html">Adjunct Professor of UX and Speaking Arrangements</a></li>
+          <li><a href="portfolio-prof.html">Adjunct Professor for Milwaukee School of Engineering</a></li>
+          <li><a href="portfolio-speaking.html">Speaking Engagements</a></li>
         </ul>
       </div>
       <div class="section">
-          <p><a href="ADzick_Resume.pdf" alt="resume">Resumé</a></p>
-          <a href="mailto:a.dzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
-          <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/twitter.svg" alt="twitter"/></a>
-          <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/linkedin.svg" alt="LinkedIn"/></a>
-        </ul>
+          <ul>
+            <!--<li><a href="">My Background and UX Philosophy</a></li>-->
+            <li><a href="ADzick_Resume.pdf" alt="resume">Resumé</a></li>
+          </ul>
+            <a href="mailto:a.dzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
+            <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/twitter.svg" alt="twitter"/></a>
+            <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/linkedin.svg" alt="LinkedIn"/></a>
       </div>
 
     </div>
