--- a/portfolio-mfg.html
+++ b/portfolio-mfg.html
@@ -22,13 +22,11 @@
     <div class="container">
       <a href="index.html">back to homepage</a>
 
-      <h1 class="small-title">Native iOS and Android for Milwaukee Tool</h1>
+      <h1 class="small-title">Updated Styling and Style Guide for Manufacturing Company</h1>
       <p class="italics">Industries: eCommerce, Manufacturing</p>
       <div class="section">
         <h2>The Challenge</h2>
-        <p><a href="https://www2.milwaukeetool.com/onekey">The company,</a> a large power tool manufacturer based in Milwaukee, WI., had a strong
-            brand presence but a fractured digital team. Products, websites and applications were
-            designed in silos and receiving a lot of negative customer feedback.
+        <p>The company, a large power tool manufacturer based in Milwaukee, WI., had a strong brand presence but a fractured digital team. The iOS and Android apps had been designed for iOS and then “ported” to Android. Android was receiving a lot of negative feedback, as it lacked consistency to other Android apps.
         </p>
       </div>
       <div class="section">
@@ -39,17 +37,13 @@
           into two distinct native applications. Our team then used our style guide to quickly iterate
           through new features.
         </p>
-        <p>I personally developed a new on-boarding and login process, humanized their legalese,
-          updated their “Tool Connect” and “Add Item” workfows and several smaller other mockups.
-        </p>
       </div>
       <div class="section">
         <h2>Methods</h2>
         <ul class="styled-list">
           <li>Visual Design (incorporating Human Interface Guidelines and Material Design)</li>
-          <li>Journey Mapping / Workflows</li>
-          <li>Mockups</li>
-          <li>Prototyping</li>
+          <li>Competitive Anaylsis</li>
+          <li>Accessibility Analysis</li>
           <li>Style Guide</li>
         </ul>
       </div>
@@ -64,12 +58,14 @@
         </p>
       </div>
       <div class="section">
-        <img src="images/mfg/tick.png" alt="Workflow Design" class="center"/>
-        <figcaption>Designing TICK 1.0 Workflow</figcaption>
         <img src="images/mfg/styleguide.png" alt="ONE-KEY Style Guide" class="center"/>
-        <figcaption>ONE-KEY iOS-Specific Style Guide</figcaption>
-        <img src="images/mfg/sample-screens.png" alt="iOS and Android Comparison" class="center"/>
-        <figcaption>Material Design and Human Interface Guidelines Implementations</figcaption>
+        <figcaption>ONE-KEY iOS-specific style guide</figcaption>
+        <img src="images/mfg/Explanation.png" alt="ONE-KEY Style Guide" class="center"/>
+        <figcaption>Part of a branding presentation about accessibility</figcaption>
+        <img src="images/mfg/Colors.png" alt="iOS and Android Comparison" class="center"/>
+        <figcaption>Streamlined color pallete we decided on</figcaption>
+        <img src="images/mfg/sample.png" alt="iOS and Android Comparison" class="center"/>
+        <figcaption>Changes in color to account for new color pallete and less red</figcaption>
       </div>
       <a href="index.html">back to homepage</a>
   </body>
