--- a/portfolio-mke.html
+++ b/portfolio-mke.html
@@ -36,8 +36,10 @@
         </p>
       </div>
       <div class="section">
-        <img src="images/mke/meetup.png" alt="Design Sprint Workflow" class="center"/>
+        <img src="images/mke/meetup.png" alt="Content Strategy" class="center"/>
         <figcaption>Our first meetup, around Content Strategy</figcaption>
+        <img src="images/mke/recent.png" alt="Remote UX" class="center"/>
+        <figcaption>Our most recent meetup, around Remote UX Tools</figcaption>
       </div>
       <a href="index.html">Back to homepage</a>
     </div>
