--- a/portfolio-safenet.html
+++ b/portfolio-safenet.html
@@ -36,7 +36,7 @@
         <h2>The Process</h2>
         <p>I analyzed both SafeNet’s current web presence, as well as their competition to come up with a list of features they had and were missing. I worked with sales and stakeholders to develop personas and basic scenarios. Using those as a lens for the website, I developed a site map and detailed information architecture.
         </p>
-        <p>Once the IA was developed, I brought in a designer. She worked on style and branding updates while I worked on wireframes and content. The designer then iterated on the wireframes, producing detailed prototypes that I was able to usability test. I also conducted thorough accessibility analysis, on designs and on developer implementation, as SafeNet needed a WCAG Level AA Compliant website as they competed in the healthcare and financial industries.
+        <p>Once the Information Architecture was developed, I brought in a designer. She worked on style and branding updates while I worked on wireframes and content. The designer then iterated on the wireframes, producing detailed prototypes that I was able to usability test. I also conducted thorough accessibility analysis, on designs and on developer implementation, as SafeNet needed a <a href="https://www.w3.org/WAI/intro/wcag">WCAG Level AA Compliant</a> website as they competed in the healthcare and financial industries.
         </p>
       </div>
       <div class="section">
