--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="section">
           <ul>
-            <!--<li><a href="">My Background and UX Philosophy</a></li>-->
+            <li><a href="">My Philosophy</a></li>
             <li><a href="ADzick_Resume.pdf" alt="resume">Resumé</a></li>
           </ul>
             <a href="mailto:a.dzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
