--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="section">
         <h3>Data-Informed Design</h3>
         <ul class="nav">
-          <li><a href="portfolio-native.html">Native iOS and Android Apps for Milwauke Tool</a></li>
+          <li><a href="portfolio-native.html">Native iOS and Android Apps for Milwaukee Tool</a></li>
           <li><a href="portfolio-mfg.html">Updated Styling and Style Guide for Manufacturing Company</a></li>
           <li><a href="portfolio-safenet.html">Accessibility-Compliant Software Consulting Website</a></li>
           <li><a href="portfolio-sprint.html">Design Sprints and Agile UX</a></li>
