--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         </p>
         <p>Interested in the Milwaukee UX community? <a href="https://www.meetup.com/brewcityux/">Check out Brew City UX.</a></br>
           Want a UX degree? Consider the <a href="https://www.msoe.edu/academics/undergraduate-degrees/user-experience-communication-design/">UXCD degree at Milwaukee School of Engineering.</a></br>
-          Just want to grab coffee? <a href="mailto:adzick@gmail.cm">Shoot me an email.</a></p>
+          Just want to grab coffee? <a href="mailto:adzick@gmail.com">Shoot me an email.</a></p>
       </div>
 
     </div>
