--- a/portfolio-mfg.html
+++ b/portfolio-mfg.html
@@ -64,7 +64,7 @@
         <figcaption>Part of a branding presentation about accessibility</figcaption>
         <img src="images/mfg/Colors.png" alt="iOS and Android Comparison" class="center"/>
         <figcaption>Streamlined color pallete we decided on</figcaption>
-        <img src="images/mfg/sample.png" alt="iOS and Android Comparison" class="center"/>
+        <img src="images/mfg/Sample.png" alt="iOS and Android Comparison" class="center"/>
         <figcaption>Changes in color to account for new color pallete and less red</figcaption>
       </div>
       <a href="index.html">back to homepage</a>
