--- a/about.html
+++ b/about.html
@@ -20,19 +20,25 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">My Philosophy</h1>
       <dib class="section">
-        <p>When I was 11, my first “real” dream job was to be an English professor, because I wanted to teach. By the time I got to high school, I was absolutely in love with my AP Physics and Math courses. I committed to an engineering school for Computer Engineering. While I found hardware and C fascinating, I missed having a direct connection to users. I wanted to be able to talk to people and be able to actually measure their progress. After a number of years as a software engineer, I stumbled into user experience.
+        <h2>About Me</h2>
+        <p>Like many people in User Experience, my path here took quite a few turns. As a kid, I never really knew what I wanted to be when I wanted to grow up. My first “real” dream job was to be an English professor, because I wanted to teach. By the time I got to high school, I was absolutely in love with my AP Physics and Math courses. I went to an engineering school but then ended up majoring in business. After a number of years as a software engineer, I stumbled into user experience. I worked for a startup as a UI designer before coming on as a full time UXer.
         </p>
-        <p>Now, nearly a decade into my user experience career, my goal is to educate businesses, students and everyone around me about a hugely important part of their product platform. I love being able to mentor individuals and foster the UX community. I’m excited about the progression of UX on the coasts and I want to grow that same spirit in the midwest.
+        <p>Now I'm nearly a decade into my user experience career. I've been a UX consultant for four years, working with firms of all sizes to start and expand their UX capabilities. I’ve done everything from multi-tiered complex research strategies to sitting with teams and helping with their day-to-day deliverables.
         </p>
-        <p>Currently, I’m a UX Consultant at a software company, working with firms of all sizes to start and expand their UX capabilities. Over the past three years with SafeNet, I’ve done everything from multi-tiered complex research strategies to sitting with teams and helping with their day-to-day deliverables.
+        <p>
+          Outside of consulting, I have a number of other activities. I teach at Milwaukee School of Engineering and volunteer at the <a href="https://mpl.org/archives/wisconsin_architectural_archives.php">Wisconsin&nbsp;Architecture&nbsp;Archive.</a> I’m learning American Sign Language and getting back into homebrewing after a several year hiatus.
         </p>
-        <p>Interested in the Milwaukee UX community? <a href="https://www.meetup.com/brewcityux/">Check out Brew City UX.</a></br>
-          Want a UX degree? Consider the <a href="https://www.msoe.edu/academics/undergraduate-degrees/user-experience-communication-design/">UXCD degree at Milwaukee School of Engineering.</a></br>
-          Just want to grab coffee? <a href="mailto:adzick@gmail.com">Shoot me an email.</a></p>
+        <h2>Philosophy</h2>
+        <p>My goal is to educate businesses, students, and everyone around me about UX, a hugely important part of their product platform. I love being able to mentor individuals and foster the community. I’m excited about the progression of UX on the coasts and I want to grow that same spirit in the midwest.
+        </p>
+        </p>
+        <p>Interested in the Milwaukee UX community? <a href="https://www.meetup.com/brewcityux/">Check out Brew City UX</a></br>
+          Want a UX degree? Consider the <a href="https://www.msoe.edu/academics/undergraduate-degrees/user-experience-communication-design/">UXCD degree at Milwaukee School of Engineering</a></br>
+          Just want to grab coffee? <a href="mailto:adzick@gmail.com">Shoot me an email</a></p>
       </div>
 
     </div>
