--- a/portfolio-mke.html
+++ b/portfolio-mke.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">Fostering the Milwaukee UX Community</h1>
       <p class="italics">Industry: User Experience</p>
@@ -41,7 +41,7 @@
         <img src="images/mke/recent.png" alt="Remote UX" class="center"/>
         <figcaption>Our most recent meetup, around Remote UX Tools</figcaption>
       </div>
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
     </div>
   </body>
 </html>
