--- a/portfolio-prof.html
+++ b/portfolio-prof.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">Adjunct Professor for Milwaukee School of Engineering</h1>
       <div class="section">
@@ -52,7 +52,7 @@
         <img src="images/speaking/planning.png" alt="UX Curriculum Planning" class="center"/>
         <figcaption>UX Curriculum Planning</figcaption>
       </div>
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
     </div>
   </body>
 </html>
