--- a/portfolio-remote.html
+++ b/portfolio-remote.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">Starting a Distributed UX Practice</h1>
       <p class="italics">Industries: eCommerce, Software</p>
@@ -53,7 +53,7 @@
         <img src="images/remote/trello.png" alt="Trello" class="center"/>
         <figcaption>One of our trello boards</figcaption>
       </div>
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
     </div>
   </body>
 </html>
