--- a/portfolio-speaking.html
+++ b/portfolio-speaking.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">Speaking Engagements</h1>
       <div class="section">
@@ -43,7 +43,7 @@
         <img src="images/speaking/audience.png" alt="UX Curriculum Planning" class="center"/>
         <figcaption>Audience during ROI of UX</figcaption>
       </div>
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
     </div>
   </body>
 </html>
