--- a/portfolio-sprint.html
+++ b/portfolio-sprint.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">Implementing Design Sprints and Agile UX</h1>
       <p class="italics">Industries: eCommerce, Software</p>
@@ -56,7 +56,7 @@
         <img src="images/sprint/voting.png" alt="Design Sprint Voting" class="center"/>
         <figcaption>Stakeholder voting</figcaption>
       </div>
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
     </div>
   </body>
 </html>
