--- a/portfolio-testing.html
+++ b/portfolio-testing.html
@@ -20,7 +20,7 @@
 
   <body>
     <div class="container">
-      <a href="index.html">Back to homepage</a>
+      <a href="index.html">back to homepage</a>
 
       <h1 class="small-title">User Testing Strategy and Analytics</h1>
       <p class="italics">Industries: eCommerce, B2C</p>
