--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
       </div>
       <div class="section">
           <ul>
+            <li><a href="about.html">My Philosophy</a></li>
             <li><a href="ADzick_Resume.pdf" alt="resume">Resumé</a></li>
           </ul>
-            <a href="mailto:a.dzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
+            <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
             <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/twitter.svg" alt="twitter"/></a>
             <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/linkedin.svg" alt="LinkedIn"/></a>
       </div>
