--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           </ul>
             <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
             <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/twitter.svg" alt="twitter"/></a>
+            <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="linkedin" src="images/medium.svg" alt="Medium"/></a>
             <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/linkedin.svg" alt="LinkedIn"/></a>
       </div>
 
