Switching to Google Fonts instead of TypeKit

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <meta name="description" content="Ashley Dzick Portfolio">
   <meta name="keywords" content="user experience, portfolio">
   <link rel="icon" href="favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://use.typekit.net/xeo1khi.css">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="stylesheet" href="reset.css" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
     <div class="container">
       <h1>Ashley Dzick</h1>
-      <h2 class="subtitle italics">UX Architect with a love of data and minimalism</h2>
+      <h2 class="subtitle">UX Architect with a love of data and minimalism</h2>
 
       <div class="section">
         <h3>Data-Informed Design</h3>
@@ -49,6 +49,7 @@
             <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/twitter.svg" alt="twitter"/></a>
             <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="linkedin" src="images/medium.svg" alt="Medium"/></a>
             <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/linkedin.svg" alt="LinkedIn"/></a>
+
       </div>
 
     </div>
