more font changes

--- a/portfolio-item-template.html
+++ b/portfolio-item-template.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Ashley Dzick Portfolio">
   <meta name="keywords" content="user experience, portfolio">
   <link rel="icon" href="favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://use.typekit.net/xeo1khi.css">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="stylesheet" href="reset.css" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
