--- a/portfolio-mfg.html
+++ b/portfolio-mfg.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Ashley Dzick Portfolio">
   <meta name="keywords" content="user experience, portfolio">
   <link rel="icon" href="favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://use.typekit.net/xeo1khi.css">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="stylesheet" href="reset.css" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
@@ -64,7 +64,7 @@
         <figcaption>Part of a branding presentation about accessibility</figcaption>
         <img src="images/mfg/Colors.png" alt="iOS and Android Comparison" class="center"/>
         <figcaption>Streamlined color pallete we decided on</figcaption>
-        <img src="images/mfg/Sample.png" alt="iOS and Android Comparison" class="center"/>
+        <img src="images/mfg/sample.png" alt="iOS and Android Comparison" class="center"/>
         <figcaption>Changes in color to account for new color pallete and less red</figcaption>
       </div>
       <a href="index.html">back to homepage</a>
