--- a/portfolio-native.html
+++ b/portfolio-native.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Ashley Dzick Portfolio">
   <meta name="keywords" content="user experience, portfolio">
   <link rel="icon" href="favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://use.typekit.net/xeo1khi.css">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="stylesheet" href="reset.css" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
@@ -26,7 +26,7 @@
       <p class="italics">Industries: eCommerce, Manufacturing</p>
       <div class="section">
         <h2>The Challenge</h2>
-        <p>Milwaukee Tool is a power tool company based in Brookfield, Wisconsin. They had a number of ongoing projects and new developments they wanted to bring to ONE-KEY, their bluetooth enabled power tool platform, but did not have the resources to develop all needed screens. 
+        <p>Milwaukee Tool is a power tool company based in Brookfield, Wisconsin. They had a number of ongoing projects and new developments they wanted to bring to ONE-KEY, their bluetooth enabled power tool platform, but did not have the resources to develop all needed screens.
         </p>
       </div>
       <div class="section">
