--- a/index.html
+++ b/index.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
-<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
-<!--[if IE 8]><html class="preIE9"><![endif]-->
-<!--[if gte IE 9]><!-->
-<html lang="en"><!--<![endif]-->
-  <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Ashley Dzick</title>
   <meta name="author" content="Ashley Dzick">
   <meta name="description" content="Ashley Dzick Portfolio">
   <meta name="keywords" content="user experience, portfolio">
   <link rel="icon" href="favicon.png" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
-  <link rel="stylesheet" href="reset.css" type="text/css">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  </head>
-  <body>
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+
+<body>
+  <!--<nav role="navigation">
+    <div class="nav-wrapper container">
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Teaching</a></li>
+        <li><a href="#">Happenings</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+-->
+  <div class="section">
+    <div class="container header">
+      <h1>I'm Ashley and I fight for the user</h1>
+      <h2>ux designer <span class="green-text text-lighten-2">//</span> adjunct professor 
+        <span class="green-text text-lighten-2">//</span> speaker 
+        <span class="green-text text-lighten-2">//</span> blogger</h2>
+    </div>
+  </div>
+  <div class="section">
     <div class="container">
-      <h1>Ashley Dzick</h1>
-      <h2 class="subtitle">UX Architect with a love of data and minimalism</h2>
-
-      <div class="section">
-        <h3>Data-Informed Design</h3>
-        <ul class="nav">
-          <li><a href="portfolio-native.html">Native iOS and Android Apps for Milwaukee Tool</a></li>
-          <li><a href="portfolio-mfg.html">Updated Styling and Style Guide for Manufacturing Company</a></li>
-          <li><a href="portfolio-safenet.html">Accessibility-Compliant Software Consulting Website</a></li>
-          <li><a href="portfolio-sprint.html">Design Sprints and Agile UX</a></li>
-          <li><a href="portfolio-testing.html">User Testing Strategy and Analytics</a></li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>Building a UX Culture</h3>
-        <ul class="nav">
-          <li><a href="portfolio-mke.html">Fostering the Milwaukee UX Community</a></li>
-          <li><a href="portfolio-prof.html">Adjunct Professor for Milwaukee School of Engineering</a></li>
-          <li><a href="portfolio-speaking.html">Speaking Engagements</a></li>
-        </ul>
-      </div>
-      <div class="section">
-          <ul>
-            <li><a href="about.html">My Philosophy</a></li>
-            <li><a href="ADzick_Resume.pdf" alt="resume">Resumé</a></li>
-          </ul>
-            <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
-            <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/twitter.svg" alt="twitter"/></a>
-            <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="linkedin" src="images/medium.svg" alt="Medium"/></a>
-            <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/linkedin.svg" alt="LinkedIn"/></a>
-
-      </div>
-
+      <h2>Recent + Upcoming Events</h2>
+      <ul>
+        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a></li>
+        <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
+        <li><a href="https://www.meetup.com/milwaukeejs/events/253476238/">Intro to Web Design and Accessibility</a></li>
+      </ul>
     </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
+      <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/tw.svg" alt="twitter"/></a>
+      <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="linkedin" src="images/mm.svg" alt="Medium"/></a>
+      <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/ln.svg" alt="LinkedIn"/></a>
+      
     </div>
+  </div>
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
   </body>
 </html>
