--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 -->
   <div class="section">
     <div class="container header">
-      <h1>I'm Ashley and I fight for the user</h1>
+      <h1>I'm Ashley and I fight for the users</h1>
       <h2>ux designer <span class="green-text text-lighten-2">//</span> adjunct professor 
         <span class="green-text text-lighten-2">//</span> speaker 
         <span class="green-text text-lighten-2">//</span> blogger</h2>
@@ -55,8 +55,12 @@
     <div class="container">
       <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
       <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/tw.svg" alt="twitter"/></a>
-      <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="linkedin" src="images/mm.svg" alt="Medium"/></a>
       <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/ln.svg" alt="LinkedIn"/></a>
+      <a href="https://medium.com/@ashleydzick" alt="Medium">
+      <svg height="24" width="24">
+        <polygon class="svg-icon" points="4.370 7.300, 4.120 6.650, 2.250 4.400, 2.250 4.060, 8.050 4.060, 12.530 13.890, 16.470 4.060, 22.000 4.060, 22.000 4.400, 20.400 5.930, 20.230 6.380, 20.230 17.620, 20.400 18.070, 21.960 19.600, 21.960 19.940, 14.120 19.940, 14.120 19.600, 15.730 18.030, 15.890 17.590, 15.890 8.500, 11.400 19.900, 10.800 19.900, 5.570 8.500, 5.570 16.140, 5.860 17.000, 7.960 19.570, 7.960 19.900, 2.000 19.900, 2.000 19.570, 4.100 17.000, 4.370 16.140, 4.370 7.300"/>
+      </svg>
+      </a>
       
     </div>
   </div>
