--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 -->
   <div class="section">
     <div class="container header">
-      <h1>I'm Ashley and I fight for the user</h1>
+      <h1>I'm Ashley and I fight for the users</h1>
       <h2>ux designer <span class="green-text text-lighten-2">//</span> adjunct professor 
         <span class="green-text text-lighten-2">//</span> speaker 
         <span class="green-text text-lighten-2">//</span> blogger</h2>
