--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 -->
   <div class="section">
     <div class="container header">
-      <h1>I'm Ashley and I fight for the users</h1>
+      <h1>I'm Ashley and I Fight for the Users</h1>
       <h2>ux designer <span class="green-text text-lighten-2">//</span> adjunct professor 
         <span class="green-text text-lighten-2">//</span> speaker 
         <span class="green-text text-lighten-2">//</span> blogger</h2>
@@ -45,7 +45,7 @@
     <div class="container">
       <h2>Recent + Upcoming Events</h2>
       <ul>
-        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a></li>
+        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a><a href="https://drive.google.com/open?id=1oLRlg0Jel88FW_vuRC1ARQTD6mAhKsbg">[Slides]</a></li>
         <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
         <li><a href="https://www.meetup.com/milwaukeejs/events/253476238/">Intro to Web Design and Accessibility</a></li>
       </ul>
