--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <h2>Recent + Upcoming Events</h2>
       <ul>
-        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a><a href="https://drive.google.com/open?id=1oLRlg0Jel88FW_vuRC1ARQTD6mAhKsbg">[Slides]</a></li>
+        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a>&nbsp;&nbsp;<a href="https://drive.google.com/open?id=1oLRlg0Jel88FW_vuRC1ARQTD6mAhKsbg">[Slides]</a></li>
         <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
         <li><a href="https://www.meetup.com/milwaukeejs/events/253476238/">Intro to Web Design and Accessibility</a></li>
       </ul>
