blog post update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <!--<nav role="navigation">
+ <!-- <nav role="navigation">
     <div class="nav-wrapper container">
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Portfolio</a></li>
@@ -31,8 +31,8 @@
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
--->
+  </nav>-->
+
   <div class="section">
     <div class="container header">
       <h1>I'm Ashley and I fight for the users</h1>
@@ -43,24 +43,29 @@
   </div>
   <div class="section">
     <div class="container">
-      <h2>Recent + Upcoming Events</h2>
+      <h3>Recent + Upcoming Events</h3>
       <ul>
-        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a></li>
+        <li><a href="https://www.eventbrite.com/e/meet-the-meetups-ii-mkes-largest-tech-meetup-tickets-50038918753">Solving What to Solve: UX + Machine Learning</a></li>
+        <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a>
+            &nbsp;&nbsp;<a href="https://drive.google.com/file/d/1oLRlg0Jel88FW_vuRC1ARQTD6mAhKsbg/view">[Slides]</a>
+        </li>
         <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
-        <li><a href="https://www.meetup.com/milwaukeejs/events/253476238/">Intro to Web Design and Accessibility</a></li>
+      </ul>
+      <h3>Recent Blog Posts</h3>
+      <ul>
+        <li><a href="https://medium.com/@ashleydzick/go-home-or-go-remote-usability-testing-anywhere-b627ebf286c5">Go Home or Go Remote, Usability Testing Anywhere</a></li>
+        <li><a href="https://safenetconsulting.com/blog/essential-content-strategy-for-great-ux/">Essential Content Strategy for Great UX</a></li>
+        <li><a href="https://safenetconsulting.com/blog/the-roi-of-a-well-crafted-user-experience/">The ROI of a Well-Crafted User Experience</a></li>
       </ul>
     </div>
   </div>
+
   <div class="section">
     <div class="container">
       <a href="mailto:adzick@gmail.com" alt="email"><img class="img-icon" id="email" src="images/email-outline.svg" alt="email"/></a>
       <a href="https://twitter.com/AshleyDzick" alt="Twitter"><img class="img-icon" id="twitter" src="images/tw.svg" alt="twitter"/></a>
       <a href="https://www.linkedin.com/in/ashleydzick/" alt="LinkedIn"><img class="img-icon" id="linkedin" src="images/ln.svg" alt="LinkedIn"/></a>
-      <a href="https://medium.com/@ashleydzick" alt="Medium">
-      <svg height="24" width="24">
-        <polygon class="svg-icon" points="4.370 7.300, 4.120 6.650, 2.250 4.400, 2.250 4.060, 8.050 4.060, 12.530 13.890, 16.470 4.060, 22.000 4.060, 22.000 4.400, 20.400 5.930, 20.230 6.380, 20.230 17.620, 20.400 18.070, 21.960 19.600, 21.960 19.940, 14.120 19.940, 14.120 19.600, 15.730 18.030, 15.890 17.590, 15.890 8.500, 11.400 19.900, 10.800 19.900, 5.570 8.500, 5.570 16.140, 5.860 17.000, 7.960 19.570, 7.960 19.900, 2.000 19.900, 2.000 19.570, 4.100 17.000, 4.370 16.140, 4.370 7.300"/>
-      </svg>
-      </a>
+      <a href="https://medium.com/@ashleydzick" alt="Medium"><img class="img-icon" id="Medium" src="images/mm.svg" alt="Medium"/></a>
       
     </div>
   </div>
