--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 </head>
 
 <body>
- <!-- <nav role="navigation">
+  <nav role="navigation">
     <div class="nav-wrapper container">
-      <ul class="right hide-on-med-and-down">
+     <!-- <ul class="right hide-on-med-and-down">
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Teaching</a></li>
         <li><a href="#">Happenings</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
-
+    -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-  </nav>-->
+  </nav>
 
   <div class="section">
     <div class="container header">
@@ -42,7 +42,7 @@
   </div>
   <div class="section">
     <div class="container">
-      <h3>Recent + Upcoming Events</h3>
+      <h3>recent + upcoming events</h3>
       <ul>
         <li><a href="https://www.eventbrite.com/e/meet-the-meetups-ii-mkes-largest-tech-meetup-tickets-50038918753">Solving What to Solve: UX + Machine Learning</a></li>
         <li><a href="https://www.creamcitycode.com/sessions/usability-testing-for-developers-ballin-on-a-budget-of-dollar0/">Usability Testing for Developers Ballin' on a Budget of $0</a>
@@ -50,12 +50,13 @@
         </li>
         <li><a href="https://www.eventbrite.com/e/building-accessible-digital-products-tickets-50084350641?aff=website">Building Accessible Digital Products</a></li>
       </ul>
-      <h3>Recent Blog Posts</h3>
+      <h3>featured blog posts</h3>
       <ul>
         <li><a href="https://medium.com/@ashleydzick/go-home-or-go-remote-usability-testing-anywhere-b627ebf286c5">Go Home or Go Remote, Usability Testing Anywhere</a></li>
         <li><a href="https://safenetconsulting.com/blog/essential-content-strategy-for-great-ux/">Essential Content Strategy for Great UX</a></li>
         <li><a href="https://safenetconsulting.com/blog/the-roi-of-a-well-crafted-user-experience/">The ROI of a Well-Crafted User Experience</a></li>
       </ul>
+      <a href="blog.html">view all blog posts</a>
     </div>
   </div>
 
